@@ -21,6 +21,7 @@
  */
 
 #include "config.h"
+#include "version.h"
 #include <ctype.h>
 #include <gtk/gtk.h>
 #include <string.h>
@@ -66,6 +67,7 @@ static const gchar *meta_server_name = NULL;	/* hostname of the meta server */
 static gboolean want_ai_chat = TRUE;
 static gboolean random_order = TRUE;	/* random seating order */
 static gboolean enable_debug = FALSE;
+static gboolean show_version = FALSE;
 
 /* Local function prototypes */
 static void add_game_to_list(gpointer name, gpointer user_data);
@@ -813,6 +815,9 @@ static GOptionEntry commandline_entries[] = {
 	{"debug", '\0', 0, G_OPTION_ARG_NONE, &enable_debug,
 	 /* Commandline option of server-gtk: enable debug logging */
 	 N_("Enable debug messages"), NULL},
+	{"version", '\0', 0, G_OPTION_ARG_NONE, &show_version,
+	 /* Commandline option of server-gtk: version */
+	 N_("Show version information"), NULL},
 	{NULL, '\0', 0, 0, NULL, NULL, NULL}
 };
 
@@ -860,7 +865,14 @@ int main(int argc, char *argv[])
 		g_print("%s\n", error->message);
 		g_error_free(error);
 		return 1;
-	};
+	}
+	if (show_version) {
+		g_print(_("Pioneers version:"));
+		g_print(" ");
+		g_print(FULL_VERSION);
+		g_print("\n");
+		return 0;
+	}
 
 	set_enable_debug(enable_debug);
 
